# HexagonalHS

./: HexagonalHS.cabal  README.md  Tides.cabal  stack.yaml
assets/shaders/: map.shader.yaml  map.vertex.glsl  shader.frag  shader.vert  simple.shader.yaml  simple.vertex.glsl
client/: Main.hs
src/: Client.hs  Main.hs
src/Client/: App.hs  Camera.hs  Event.hs  GameScene.hs  Utils.hs
src/Client/App/: Event.hs  Resources.hs  Uniform.hs
src/Client/App/Resources/: Mesh.hs  Shader.hs
src/Client/Rendering/: Map.hs  Mesh.hs  Renderable.hs
src/Client/Rendering/Geometry/: Hexagon.hs
src/HexagonalHS/: Map.hs
src/Tides/: Map.hs
