name:                   HexagonalHS
version:                0.1.0.0
-- synopsis:
-- description:
homepage:               https://github.com/ashe/HexagonalHS#readme
license:                BSD3
author:                 Ashley Rose
maintainer:             ashley@aas.sh
copyright:              2020 Ashley Rose
category:               Web
build-type:             Simple
cabal-version:          >=1.10
extra-source-files:     README.md

library
  hs-source-dirs:       src
  exposed-modules:      Client
  default-language:     Haskell2010
  build-depends:        base >= 4.7 && < 5
                        , bindings-GLFW
                        , GLFW-b
                        , OpenGL
                        , OpenGLRaw
                        , linear-opengl
                        , linear
                        , grid
                        , yaml
                        , vector
                        , random
                        , filepath
                        , directory
                        , containers
                        , distributive
                        , bytestring
                        , lens
                        , stm
                        , mtl
  other-modules:        HexagonalHS.Map
                        , Client.App
                        , Client.App.Event
                        , Client.App.Uniform
                        , Client.App.Resources
                        , Client.App.Resources.Shader
                        , Client.App.Resources.Mesh
                        , Client.Utils
                        , Client.Rendering.Renderable
                        , Client.Rendering.Mesh
                        , Client.Rendering.Map
                        , Client.Rendering.Geometry.Hexagon
                        , Client.GameScene
                        , Client.Camera

executable HexagonalHS
  hs-source-dirs:       client
  main-is:              Main.hs
  default-language:     Haskell2010
  build-depends:        base
                        , HexagonalHS
