name:                Tides
version:             0.1.0.0
-- synopsis:
-- description:
homepage:               https://github.com/ashe/Tides#readme
license:                BSD3
author:                 Ashley Smith
maintainer:             ashley@aas.sh
copyright:              2020 Ashley Smith
category:               Web
build-type:             Simple
cabal-version:          >=1.10
extra-source-files:     README.md

library
  hs-source-dirs:       src
  exposed-modules:      Client
  default-language:     Haskell2010
  build-depends:        base >= 4.7 && < 5
                        , bindings-GLFW
                        , GLFW-b
                        , OpenGL
                        , OpenGLRaw
                        , linear
                        , linear-opengl
                        , distributive
                        , bytestring
                        , lens
                        , stm
                        , mtl
  other-modules:          Client.App
                        , Client.App.Event
                        , Client.Utils
                        , Client.GameScene

executable Tides
  hs-source-dirs:       client
  main-is:              Main.hs
  default-language:     Haskell2010
  build-depends:        base
                        , Tides
